--- a/templates/user/posts.html.twig
+++ b/templates/user/posts.html.twig
@@ -25,7 +25,7 @@
                 {% endfor %}
             </ul>
         {% else %}
-            <h4 class="text-xl font-semibold text-gray-400">No topics have been created by {{ user.username }} yet.</h4>
+            <h4 class="text-xl font-semibold text-gray-400">No posts have been made by {{ user.username }} yet.</h4>
         {% endif %}
 
         <!-- Pagination -->
