--- a/templates/topic/show.html.twig
+++ b/templates/topic/show.html.twig
@@ -5,15 +5,17 @@
 {% block body %}
     <div class="container mx-auto px-4 py-6 bg-gray-800 text-white font-serif">
         <nav class="mb-4 text-gray-400 text-sm">
-            <a href="{{ path('board_show', {'id': board.id}) }}" class="text-yellow-400 hover:underline">{{ board.title }}</a>
+            <a href="{{ path('board_show', {'id': board.id}) }}"
+               class="text-yellow-400 hover:underline">{{ board.title }}</a>
             <span class="text-gray-500"> &gt; </span>
             <span>{{ topic.title }}</span>
         </nav>
 
-        <div class="bg-gray-900 border-4 border-gray-600 shadow-lg rounded-md p-6 mb-8">
+        <div class="bg-gray-900 border-4 border-gray-600 shadow-lg p-6 mb-8">
             <div class="flex space-x-4">
                 {{ form_start(lockForm, {'attr': {'class': 'space-y-4'}}) }}
-                <button type="submit" class="inline-block bg-yellow-600 text-white py-2 px-4 rounded-md hover:bg-yellow-500 transition duration-200 ease-in-out">
+                <button type="submit"
+                        class="inline-block bg-yellow-600 text-white py-2 px-4 rounded-md hover:bg-yellow-500 transition duration-200 ease-in-out">
                     {% if topic.locked %}
                         Unlock Topic
                     {% else %}
@@ -23,7 +25,8 @@
                 {{ form_end(lockForm) }}
 
                 {{ form_start(visibilityForm, {'attr': {'class': 'space-y-4'}}) }}
-                <button type="submit" class="inline-block bg-orange-600 text-white py-2 px-4 rounded-md hover:bg-orange-500 transition duration-200 ease-in-out">
+                <button type="submit"
+                        class="inline-block bg-orange-600 text-white py-2 px-4 rounded-md hover:bg-orange-500 transition duration-200 ease-in-out">
                     {% if topic.visible %}
                         Hide Topic
                     {% else %}
@@ -33,39 +36,56 @@
                 {{ form_end(visibilityForm) }}
 
                 <div class="mb-6">
-                    <a href="{{ path('topic_move', {'id': topic.id}) }}" class="inline-block bg-green-600 text-white py-2 px-4 rounded-md hover:bg-green-500 transition duration-200 ease-in-out">
+                    <a href="{{ path('topic_move', {'id': topic.id}) }}"
+                       class="inline-block bg-green-600 text-white py-2 px-4 rounded-md hover:bg-green-500 transition duration-200 ease-in-out">
                         Move Topic
                     </a>
                 </div>
             </div>
 
             <div class="text-gray-300">
-                <p><span class="font-bold">Author:</span> {{ topic.author.username }} <span class="text-sm text-gray-500">{{ topic.createdAt|date('Y-m-d') }}</span></p>
+                <p><span class="font-bold">Author:</span> {{ topic.author.username }} <span
+                            class="text-sm text-gray-500">{{ topic.createdAt|date('Y-m-d') }}</span></p>
                 <h4 class="text-3xl font-extrabold mt-4 mb-2 text-yellow-400">{{ topic.title }}</h4>
                 <p class="mb-4">{{ topic.body }}</p>
                 <div class="flex space-x-4">
-                    <a href="{{ path('topic_edit', {'id': topic.id}) }}" class="inline-block bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition duration-200 ease-in-out">Edit</a>
-                    <a href="{{ path('admin_manage', {'user': topic.author.id}) }}" class="inline-block bg-purple-700 text-white py-2 px-4 rounded-md hover:bg-purple-600 transition duration-200 ease-in-out">Manage</a>
+                    <a href="{{ path('topic_edit', {'id': topic.id}) }}"
+                       class="inline-block bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition duration-200 ease-in-out">Edit</a>
+                    <a href="{{ path('admin_manage', {'user': topic.author.id}) }}"
+                       class="inline-block bg-purple-700 text-white py-2 px-4 rounded-md hover:bg-purple-600 transition duration-200 ease-in-out">Manage</a>
                 </div>
             </div>
         </div>
 
         {% if paginator.results %}
-            <div class="mt-8 mb-4 space-y-4">
+            <div class="mt-8 mb-4 space-y-3">
                 {% for key, post in paginator.results %}
-                    <div id="{{ post.id }}" class="bg-gray-700 border-2 border-gray-600 shadow-md rounded-md p-4">
-                        <div class="flex justify-between items-center text-gray-400 text-sm">
-                            <span>{{ post.author.username }} (Posts: {{ post.author.postCount }})</span>
-                            <div>
-                                <span class="text-gray-500">{{ post.createdAt|date('Y-m-d') }}</span>
-                                <a class="ml-1" href="#{{ post.id }}">#{{ paginator.postIndex(key) }}</a>
+                    <div id="{{ post.id }}" class="bg-gray-700 border-2 border-gray-600 shadow-md">
+                        <div class="flex justify-between items-start">
+                            <div class="w-1/6 p-3">
+                                <a class="text-blue-500"
+                                   href="{{ path('user_profile_public', { id: post.author.id }) }}">
+                                    {{ post.author.username }}:
+                                </a>
+                                <p class="text-sm">
+                                    (Posts: {{ post.author.postCount }})
+                                </p>
+                            </div>
+                            <div class="flex justify-content-start w-full py-2 px-3">
+                                <span class="text-gray-300 text-left">{{ post.body }}</span>
+                            </div>
+                            <div class="w-1/6 text-right p-2">
+                                <div>
+                                    <span class="text-gray-500">{{ post.createdAt|date('Y-m-d H:m') }}</span>
+                                    <a class="ml-1" href="#{{ post.id }}">#{{ paginator.postIndex(key) }}</a>
+                                </div>
+                                {% if app.user is same as post.author %}
+                                <a href="{{ path('post_edit', {'id': post.id}) }}" class="inline-block text-blue-500 mt-2">Edit</a>
+                                {% endif %}
                             </div>
                         </div>
-                        <p class="text-gray-300 mt-2">{{ post.body }}</p>
-                        <div class="flex space-x-4 text-sm mt-4">
-                            <a href="{{ path('post_edit', {'id': post.id}) }}" class="inline-block bg-orange-600 text-white py-2 px-4 rounded-md hover:bg-orange-500 transition duration-200 ease-in-out">Edit</a>
-                            <a href="{{ path('admin_manage', {'user': post.author.id}) }}" class="inline-block bg-red-600 text-white py-2 px-4 rounded-md hover:bg-red-500 transition duration-200 ease-in-out">Manage</a>
-                        </div>
+
+
                     </div>
                 {% endfor %}
             </div>
@@ -82,7 +102,8 @@
                     }
                 }) }}
             </div>
-            <button type="submit" class="inline-block bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition duration-200 ease-in-out">
+            <button type="submit"
+                    class="inline-block bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition duration-200 ease-in-out">
                 Submit
             </button>
             {{ form_end(form) }}
